# blacklist

./: .gitignore  README.md  main.py  pyproject.toml
blacklist_cli/: blacklist.py  main.py
src/: blacklist.py  main.py
