[tool.poetry]
name = "blacklist-cli"
version = "0.1.0"
description = "Hacky CLI to block websites through etc/hosts"
authors = ["Philipp Hager <philipp.konstantin.hager@gmail.com>"]

[tool.poetry.scripts]
blacklist = "blacklist_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer-cli = "^0.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
